fix(layout)!: Rename DockingPanel.state invisible -> hidden

--- a/packages/layout/src/docking/docking-panel.component.scss
+++ b/packages/layout/src/docking/docking-panel.component.scss
@@ -38,7 +38,7 @@
         ---docking-panel-t-visible: 0%;
     }
 
-    &[state="invisible"] {
+    &[state="hidden"] {
         &[orient="horizontal"] {
             transform: translateY(var(---docking-panel-t-hide));
         }
@@ -48,7 +48,7 @@
         }
     }
 
-    &:not([state="invisible"]) {
+    &:not([state="hidden"]) {
         &[orient="horizontal"] {
             transform: translateY(var(---docking-panel-t-visible));
         }
